# Why-anomalous

./: LICENSE  Makefile  README.md  pyproject.toml  requirements.txt
anomaly_detection/: config.py  dataset.py  features.py
data/processed/: processes_data.csv
deploy-model-streaming/: app.py
docs/: mkdocs.yml
docs/docs/: index.md
notebooks/: 1.0-ec-data-exploration.ipynb  2.0-baseline-model.ipynb  3.0-model-development.ipynb  anomalies_by_channel_region.csv
